Restoring previously implemented changes (fixing issues involving content overflows when zooming in and scrollbars not showing on initial page load)

--- a/views/static/css/approver.css
+++ b/views/static/css/approver.css
@@ -193,13 +193,13 @@ header{
 }
 
 #select-wrapper{
-	padding: 0.6em 4em;
+	padding: 0.78em 4em;
 	border-bottom: thin solid #dedede;
 	background-color: #f4f4f4;
 }
 
 #search{
-	width: 30em;
+	width: 80%;
 	background-image: url('../assets/icons/round-search-24px.svg');
 	background-repeat: no-repeat;
     padding-left: 40px;
@@ -268,6 +268,7 @@ header{
 
 #main-content .content-feed{
 	overflow-y: scroll;
+    max-height: 430px;
 	padding: 0 4em;
 	padding-right: 2.5em;
 }
@@ -300,6 +301,7 @@ header{
 	position: relative;
 	display: inline-block;
 	margin: 0 2em;
+    overflow-x: auto;
 }
 
 #main-content .content-feed .content-wrapper .goto{
@@ -344,14 +346,14 @@ header{
 	z-index: 998;
 	right: 0;
 	width: 450px;
-	max-height: 100%;
+	max-height: 490px;
 	overflow-y: scroll;
 	border-left: thin solid #ddd;
 }
 
 #sidebar .action-title{
 	color: var(--theme-color);
-	padding: 1.01em 2em;
+	padding: 1.1em 2em;
 	background-color: #f4f4f4;
 	border-bottom: thin solid #ddd;
 }
